# spiffworkflow-backend

./: Ofichial.docker-compose.yml  Prod.docker-compose copy.yml  README.md  cp_strart.sh  dev.Dockerfile  dev.docker-compose.yml  pyproject.toml  strart.sh  wsgi.py
connector-proxy/: dev.Dockerfile  pyproject.toml
connector-proxy/connector-example/src/connector_example/commands/: example.py
connector-proxy/connector-sql/: pyproject.toml
connector-proxy/connector-sql/src/connector_sql/: __init__.py
connector-proxy/connector-sql/src/connector_sql/commands/: sql.py
connector-proxy/connector-sql/src/connector_sql/di/config/: config.yml
connector-proxy/di-example/: tools.py
connector-proxy/di-example/config/: config.yml  default_config.yml
docs/: pycharm.md
process_models/: process_group.json
process_models/site-administration/set-permissions/: users_to_groups.dmn
process_models/site-administration/set-permissions-groups-only/: permissions.bpmn  process_model.json
process_models/test/: process_group.json
process_models/test/demosignal/: demosignal.bpmn  process_model.json
process_models/test/test/: process_model.json  test.bpmn
spiffworkflow-worker/: __init__.py
spiffworkflow-worker/celery/: __init__.py  run.py  tasks.py
spiffworkflow-worker/celery_tasks/: tasks.py
spiffworkflow-worker/di/: __init__.py  celery.py  common.py
spiffworkflowWorker/: test.py
spiffworkflowWorker/celery_tasks/: run.py  tasks.py
spiffworkflowWorker/di/: __init__.py  celery.py
spiffworkflowWorker/spiffManager/: __init__.py
src/spiffworkflow_backend/: __init__.py
(+12 files in other folders)
